--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,3 +1,73 @@
 page-about {
+  on-app._gmaps_cdv_ .nav-decor {
+    background-color: transparent !important;
+  }
+  .toolbar-title {
+    text-align: center;
+  }
+    #please-connect {
+    position: absolute;
+    background-color: #000;
+    opacity: 0.5;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+  }
+ 
+  #please-connect p {
+      color: #fff;
+      font-weight: bold;
+      text-align: center;
+      position: relative;
+      font-size: 1.6em;
+      top: 30%;
+  }
+ 
+  .scroll {
+      height: 100%;
+  }
+ 
+  #map {
+      width: 100%;
+      height: 100%;
+  }
+}
+.toolbar-content{
+  text-align: center;
+}
+page-about .toolbar-title {
+  text-align: center;
+  display: inline;
+  font-weight: 400;
+  vertical-align: middle;
+  font-size: 1.9rem;
+}
+ion-title{
+  display: inline;
+}
+ion-icon {
+  display: inline;
+  
+ font-size: 1.8em;
+  /* float: right; */
+  color: #401D00;
+  vertical-align: middle;
+}
 
+.ios,
+.md {
+  home-page {
+    .scroll-content {
+      height: 100%
+    }
+    #map {
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
+#map {
+  width: 100%;
+  height: 100%;
 }
