--- a/src/pages/active/active.scss
+++ b/src/pages/active/active.scss
@@ -1,3 +1,30 @@
-page-active {
+page-active {}
 
+h2 {
+  font-family: "Roboto", serif;
+  font-weight: 100;
+  letter-spacing: 1px;
+  margin-bottom: 25px;
+}
+
+.active {
+  img {
+    width: 50em;
+  }
+  .backdrop {
+    &.active {
+      background: url(/assets/images/perculator.jpg);
+      height: 55%;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position-y: 14%;
+    }
+  }
+  .rating {
+    margin-top: 20px;
+    color: #452323;
+    .ion-icon {
+      font-size: 2.2em;
+    }
+  }
 }
