--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -23,8 +23,8 @@ $font-path: "../assets/fonts";
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #0AFDA4,
-  secondary:  #578F7A,
+  primary:     #401D00,
+  secondary:  #452323,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
