--- a/src/pages/active/active.scss
+++ b/src/pages/active/active.scss
@@ -13,7 +13,7 @@ h2 {
   }
   .backdrop {
     &.active {
-      background: url(/assets/images/perculator.jpg);
+      background: url(../assets/images/perculator.jpg);
       height: 55%;
       background-size: cover;
       background-repeat: no-repeat;
