--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,18 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="content">
+ 
+<!-- The side menu title -->
+  <ion-toolbar>
+    <ion-title>Menu</ion-title>
+  </ion-toolbar>
+ 
+  <ion-content>
+    <ion-list>
+   
+      <button ion-item *ngFor="let p of pages" (click)="openPage(p)">
+        {{p.title}}
+      </button>
+    </ion-list>
+  </ion-content>
+ 
+</ion-menu>
+<ion-nav swipe-back-enabled="false"  #content id="nav" [root]="rootPage"></ion-nav>
